# ghw-GenAIWeek-2025

./: README.md
clarifai-agent/: README.md  main.py  plan.txt  pyproject.toml  requirements.txt  test.py
clarifai-codes/: main.py  pyproject.toml
genAiDevTools/: README.md  chatbot.py  pyproject.toml  transformers-sentiment.py  utils.py
prompt-eng/: main.py  prompt-testing.ipynb  pyproject.toml
