[project]
name = "clarifai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clarifai>=11.5.2",
    "crewai>=0.130.0",
    "crewai-tools>=0.47.1",
    "openai>=1.86.0",
    "python-dotenv>=1.1.0",
    "st-copy-to-clipboard>=0.1.6",
    "streamlit>=1.45.1",
]
